Fixed page height bug on mobile caused by JobList refactoring

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -137,6 +137,12 @@ dt {
   position: relative;
 }
 
+.content {
+  @include breakpoint(medium down) {
+    height: 100%;
+  }
+}
+
 .decorations {
   width: 100%;
 }
